탭 이벤트 생성 gnb 관련 이벤트 추가 생성

--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -79,7 +79,7 @@
 
 	<h2>input타입 - password</h2>
 	<div class="inputBox">
-		<input type="text" class="inp pwinp" placeholder="" />
+		<input type="text" class="inp pwinp" id="test" placeholder="" />
 		<button class="inpReset"></button>
 	</div>
 	<!-- souce code 뷰어 -->
