코딩맵 수정

--- a/htmlList.html
+++ b/htmlList.html
@@ -72,7 +72,7 @@
 
 <body>
     <section class="wrap">
-        <h1>OPUS - 사용자 화면</h1>
+        <h1>OPUS</h1>
         <div class="text_box">
             <p>* 문서타입 : HTML5 / CSS3</p>
             <!-- <p>* pc : 1280 ~ ? </p>
@@ -98,6 +98,17 @@
                 </thead>
                 <tbody>
                     <!-- ★관리자 -->
+					<tr class="line">
+						<th>외부 참조 url</th>
+                        <td colspan="4">
+							검색 자동완성 : <br />
+							url : <a href="http://easyautocomplete.com/examples" target="_blank">EasyAutoComplete</a> <br /><br />
+							검색 combobox : <br />
+							url : <a href="http://jqueryui.com/autocomplete/#combobox" target="_blank">Autocomplete</a> <br /><br />
+							flag selectbox : <br />
+							url : <a href="https://semantic-ui.com/collections/form.html" target="_blank">Semantic UI</a>
+						</td>
+                    </tr>
                     <tr class="line">
 						<th colspan="3">가이드</th>
                         <td><a target="_blank" href="./pub/templateA.html">templateA.html</a></td>
