진행 상황 공유

--- a/htmlList.html
+++ b/htmlList.html
@@ -72,7 +72,7 @@
 
 <body>
     <section class="wrap">
-        <h1>OPUS</h1>
+        <h1>OPUS - 사용자</h1>
         <div class="text_box">
             <p>* 문서타입 : HTML5 / CSS3</p>
             <!-- <p>* pc : 1280 ~ ? </p>
@@ -98,17 +98,6 @@
                 </thead>
                 <tbody>
                     <!-- ★관리자 -->
-					<tr class="line">
-						<th>외부 참조 url</th>
-                        <td colspan="4">
-							검색 자동완성 : <br />
-							url : <a href="http://easyautocomplete.com/examples" target="_blank">EasyAutoComplete</a> <br /><br />
-							검색 combobox : <br />
-							url : <a href="http://jqueryui.com/autocomplete/#combobox" target="_blank">Autocomplete</a> <br /><br />
-							flag selectbox : <br />
-							url : <a href="https://semantic-ui.com/collections/form.html" target="_blank">Semantic UI</a>
-						</td>
-                    </tr>
                     <tr class="line">
 						<th colspan="3">가이드</th>
                         <td><a target="_blank" href="./pub/templateA.html">templateA.html</a></td>
@@ -121,6 +110,17 @@
 					<tr>
                         <td><a target="_blank" href="./pub/templateC.html">templateC.html</a></td>
                         <td>레이어 가이드</td>
+                    </tr>
+					<tr class="line">
+						<th>외부 참조 url</th>
+                        <td colspan="4">
+							검색 자동완성 : <br />
+							url : <a href="http://easyautocomplete.com/examples" target="_blank">EasyAutoComplete</a> <br /><br />
+							검색 combobox : <br />
+							url : <a href="http://jqueryui.com/autocomplete/#combobox" target="_blank">Autocomplete</a> <br /><br />
+							flag selectbox : <br />
+							url : <a href="https://semantic-ui.com/collections/form.html" target="_blank">Semantic UI</a>
+						</td>
                     </tr>
 
                     <tr class="line">
@@ -315,43 +315,43 @@
                         <th>홈페이지</th>
                         <td>상품선택</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>부가서비스선택</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="homepage/cup00002.html">homepage/cup00002.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>플랫폼선택</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="homepage/cup00003.html">homepage/cup00003.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>계약정보입력</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="homepage/cup00005.html">homepage/cup00005.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>계약서확인</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="homepage/cup00006.html">homepage/cup00006.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>계약정보확인</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="homepage/cup00007.html">homepage/cup00007.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>홈페이지/교육동영상 링크</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td></td>
                         <td class="red"></td>
                     </tr>
 
