--- a/login/cup10003.html
+++ b/login/cup10003.html
@@ -37,13 +37,13 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="inner">
 				<h2 class="tit" id="i10003-newAccount">New Account</h2>
-				<section class="inpGroup">
+				<section class="contGroup">
 					<h1 class="tit" id="i10003-userLb">User</h1>
 					<dl class="inpItem">
 						<dt id="i10003-nameLb">Name</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="text" class="inp Mandate" id="i10003-name" placeholder="Your Name" maxlength="50">
+								<input type="text" name="i10003-name" class="inp Mandate" id="i10003-name" placeholder="Your Name" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
 						</dd>
@@ -52,7 +52,7 @@
 						<dt id="i10003-eMailLb">Email</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="text" class="inp Mandate" id="i10003-eMail" placeholder="Your Email" maxlength="50">
+								<input type="text" name="i10003-eMail" class="inp Mandate" id="i10003-eMail" placeholder="Your Email" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
 							<p class="alertMessage" id="i10003-dupeMailLb">Duplicated Email address found while adding your address.</p>
@@ -62,7 +62,7 @@
 						<dt id="i10003-passwordLb">Password</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="password" class="inp Mandate pwinp" id="i10003-password" placeholder="Type Password" maxlength="50">
+								<input type="password" name="i10003-password" class="inp Mandate pwinp" id="i10003-password" placeholder="Type Password" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
 							<p class="alertMessage" id="i10003-shortPasswordLb">Password must contain at least 6 characters, including alphabets and numbers.</p>
@@ -72,22 +72,22 @@
 						<dt id="i10003-confirmPasswordLb">Confirm Password</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="password" class="inp Mandate pwinp" id="i10003-confirmPassword" placeholder="Re-Type Password" maxlength="50">
+								<input type="password" name="i10003-confirmPassword" class="inp Mandate pwinp" id="i10003-confirmPassword" placeholder="Re-Type Password" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
 							<p class="alertMessage" id="i10003-misconfirmPasswordLb">The passwords you entered don't match.</p>
 						</dd>
 					</dl>
 				</section>
-				<section class="inpGroup">
-					<h2 class="tit" id="i10003-organizationLb">Organization</h2>
+				<section class="contGroup">
+					<h1 class="tit" id="i10003-organizationLb">Organization</h1>
 					<dl class="inpItem">
 						<dt id="i10003-companyLb">Company</dt>
 						<dd>
 							<div class="inputBox schType ty1">
 								<div class="inner">
 									<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
-									<input type="text" class="inp autoSch ty1 name" id="i10003-company" placeholder="Type Company Name">
+									<input type="text" name="i10003-company" class="inp autoSch ty1 name" id="i10003-company" placeholder="Type Company Name">
 									<button class="inpReset"></button>
 								</div>
 							</div>
@@ -97,7 +97,7 @@
 						<dt id="i10003-departmentLb">Department</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="text" class="inp" id="i10003-department" placeholder="Type Department Name" maxlength="50">
+								<input type="text" name="i10003-department" class="inp" id="i10003-department" placeholder="Type Department Name" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
 						</dd>
@@ -106,7 +106,7 @@
 						<dt id="i10003-address1Lb">Address Line1</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="text" class="inp" id="i10003-address1" placeholder="Type Street Address, P.O. box" maxlength="50">
+								<input type="text" name="i10003-address1" class="inp" id="i10003-address1" placeholder="Type Street Address, P.O. box" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
 						</dd>
@@ -115,7 +115,7 @@
 						<dt id="i10003-address2Lb">Address Line2</dt>
 						<dd>
 							<div class="inputBox">
-								<input type="text" class="inp" id="i10003-address2" placeholder="Type Department Name" maxlength="50">
+								<input type="text" name="i10003-address2" class="inp" id="i10003-address2" placeholder="Type Department Name" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
 						</dd>
@@ -126,7 +126,7 @@
 							<div class="inputBox schType ty2">
 								<div class="inner">
 									<input type="text" class="inp autoSch ty2 code Readonly" readonly="readonly">
-									<input type="text" class="inp autoSch ty2 name" id="i10003-city" placeholder="Type City">
+									<input type="text" name="i10003-city" class="inp autoSch ty2 name" id="i10003-city" placeholder="Type City">
 									<button class="inpReset"></button>
 								</div>
 							</div>
@@ -138,7 +138,7 @@
 							<div class="inputBox schType ty2">
 								<div class="inner">
 									<input type="text" class="inp autoSch ty3 code Readonly" readonly="readonly">
-									<input type="text" class="inp autoSch ty3 name" id="i10003-state" placeholder="Type State">
+									<input type="text" name="i10003-state" class="inp autoSch ty3 name" id="i10003-state" placeholder="Type State">
 									<button class="inpReset"></button>
 								</div>
 							</div>
@@ -398,7 +398,7 @@
 							</div>
 							<div class="inputBox zipCode">
 								<div class="inner">
-									<input type="text" class="inp" id="i10003-zipCode" placeholder="Zip Code">
+									<input type="text" name="i10003-zipCode" class="inp" id="i10003-zipCode" placeholder="Zip Code">
 									<button class="inpReset"></button>
 								</div>
 							</div>
@@ -406,7 +406,9 @@
 					</dl>
 				</section>
 				<div class="joinBtn">
-					<button class="btn" id="i10003-next">Next</button>
+					<div class="btns">
+						<button class="btn" id="i10003-next">Next</button>
+					</div>
 				</div>
 			</div>
 			<div class="link">
