--- a/homepage/cup00003.html
+++ b/homepage/cup00003.html
@@ -39,7 +39,7 @@
 				<h2 class="tit" id="i00002-newAccountLb">Select Platform Type</h2>
 
 				<section class="contGroup">
-					<dl class="itemList1">
+					<dl class="inpItem">
 						<dt id="i00002-basicLb">Platform Type</dt>
 						<dd>
 							<div class="inputBox count">
@@ -65,7 +65,7 @@
 
 						</dd>
 					</dl>
-					<dl class="itemList1 fin">
+					<dl class="inpItem fin">
 						<dt id="i00002-monthlyTotalLb">Monthly Total</dt>
 						<dd>
 							<span class="totalVal" id="i00002-monthlyTotal">15</span>
