--- a/htmlList.html
+++ b/htmlList.html
@@ -328,25 +328,25 @@
                         <td>플랫폼선택</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00003.html">homepage/cup00003.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">작업 중</td>
                     </tr>
 					<tr>
                         <td>계약정보입력</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00005.html">homepage/cup00005.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">작업 중</td>
                     </tr>
 					<tr>
                         <td>계약서확인</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00006.html">homepage/cup00006.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">작업 중</td>
                     </tr>
 					<tr>
                         <td>계약정보확인</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00007.html">homepage/cup00007.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">작업 중</td>
                     </tr>
 					<tr>
                         <td>홈페이지/교육동영상 링크</td>
