페이지 공유

--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -155,7 +155,7 @@
 	</div>
 	<!-- //souce code 뷰어 -->
 
-	<h2></h2>
+	<h2>금액 표기</h2>
 	<div class="inputBox readonly amount">
 		<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
 		<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="1,500.00">
@@ -170,18 +170,6 @@
 		</pre>
 	</div>
 	<!-- //souce code 뷰어 -->
-
-
-
-
-
-
-
-
-
-
-
-
 
 	<h2>체크박스</h2>
 	<div class="checkbox">
@@ -226,6 +214,61 @@
 </dl>
 	</textarea>
 	<!-- //souce code 뷰어 -->
+
+	<h2>Combobox</h2>
+
+	<div class="comboBox">
+		<select class="comboSelect" id="" placeholder="Select a Type">
+			<option value="">Select a Type</option>
+			<option value="Share">Share</option>
+			<option value="ActionScript">ActionScript</option>
+			<option value="AppleScript">AppleScript</option>
+			<option value="Asp">Asp</option>
+			<option value="BASIC">BASIC</option>
+			<option value="C">C</option>
+		</select>
+	</div>
+	<!-- souce code 뷰어 -->
+	<textarea name="" id="" cols="30" rows="10" class="pubTextarea">
+<div class="comboBox">
+	<select class="comboSelect" id="" placeholder="Select a Type">
+		<option value="">Select a Type</option>
+		<option value=""></option>
+	</select>
+</div>
+
+value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동일해야 함.
+	</textarea>
+	<!-- //souce code 뷰어 -->
+
+	<h2>동의 체크</h2>
+	<div class="agreeChk">
+		<p class="txt">I am sure to read and to agree the terms</p>
+		<div class="checkbox">
+			<input type="checkbox" name="" id="check"><label for="check">Agree</label>
+		</div>
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="agreeChk">
+				<p class="txt">I am sure to read and to agree the terms</p>
+				<div class="checkbox">
+					<input type="checkbox" name="" id="check"><label for="check">Agree</label>
+				</div>	
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+
+
+
+
+
+
+
+
 
 
 
