코딩맵 수정

--- a/htmlList.html
+++ b/htmlList.html
@@ -328,7 +328,7 @@
                         <td>플랫폼선택</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00003.html">homepage/cup00003.html</a></td>
-                        <td class="red">작업 중</td>
+                        <td class="red"></td>
                     </tr>
 					<tr>
                         <td>계약정보입력</td>
