--- a/homepage/cup00002.html
+++ b/homepage/cup00002.html
@@ -41,7 +41,7 @@
 				<section class="contGroup">
 					<dl class="inpItem">
 						<dt id="i00002-basicLb">Basic</dt>
-						<dd>
+						<dd class="tr">
 							<div class="inputBox count">
 								<button class="plus"><span>Plus</span></button>
 								<input type="number" name="i00002-basic" class="inp Edit_Count" id="i00002-basic" min="0" value="15">
@@ -56,7 +56,7 @@
 					<div class="lineBasic"></div>
 					<dl class="inpItem">
 						<dt id="i00002-monthlyTotalLb"><span class="bold">Monthly Total</span></dt>
-						<dd>
+						<dd class="tr">
 							<span class="totalVal" id="i00002-monthlyTotal"><span class="bold">15</span></span>
 							<div class="inputBox readonly amount">
 								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
@@ -65,7 +65,6 @@
 						</dd>
 					</dl>
 				</section>
-
 				<section class="contGroup">
 					<h1 class="tit" id="i00002-optionalServicesLb">Optional Services</h1>
 					<dl class="inpItem">
