--- a/homepage/cup00003.html
+++ b/homepage/cup00003.html
@@ -41,7 +41,7 @@
 				<section class="contGroup">
 					<dl class="inpItem">
 						<dt id="i00003-platformTypeLb">Platform Type</dt>
-						<dd>
+						<dd class="tr">
 							<div class="comboBox">
 								<select class="comboSelect" id="i00003-platformType" placeholder="Select a Type">
 									<option value="">Select a Type</option>
@@ -63,7 +63,7 @@
 						<div class="lineBasic"></div>
 						<dl class="inpItem fin">
 							<dt id="i00003-monthlyTotalLb"><span class="bold">Monthly Total</span></dt>
-							<dd>
+							<dd class="tr">
 								<div class="inputBox readonly amount">
 									<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
 									<input type="text" name="i00003-totalPrice" class="inp Readonly" id="i00003-totalPrice" readonly="readonly" value="1,500.00">
