--- a/htmlList.html
+++ b/htmlList.html
@@ -334,7 +334,7 @@
                         <td>계약정보입력</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00005.html">homepage/cup00005.html</a></td>
-                        <td class="red">작업 중</td>
+                        <td class="red"></td>
                     </tr>
 					<tr>
                         <td>계약서확인</td>
