마크업 수정

--- a/homepage/cup00002.html
+++ b/homepage/cup00002.html
@@ -35,10 +35,9 @@
 	<div class="flexWrap">
 		<div class="flexLayer">
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
-			<div class="inner">
-				<h2 class="tit" id="i00002-newAccountLb">Define Users</h2>
-
-				<section class="contGroup">
+			<div class="flexContent">
+				<div class="inner">
+					<h2 class="tit" id="i00002-newAccountLb">Define Users</h2>
 					<dl class="inpItem">
 						<dt id="i00002-basicLb">Basic</dt>
 						<dd class="tr">
@@ -64,9 +63,8 @@
 							</div>
 						</dd>
 					</dl>
-				</section>
-				<section class="contGroup">
-					<h1 class="tit" id="i00002-optionalServicesLb">Optional Services</h1>
+
+					<h3 class="tit" id="i00002-optionalServicesLb">Optional Services</h3>
 					<dl class="inpItem">
 						<dt id="i00002-internetFaxLb">Internet Fax <br />($ 1.00/call)</dt>
 						<dd>
@@ -118,10 +116,10 @@
 							</ul>
 						</dd>
 					</dl>
-				</section>
-				<div class="joinBtn">
-					<div class="btns">
-						<button class="btn" id="i00002-next">Next</button>
+					<div class="joinBtn">
+						<div class="btns">
+							<button class="btn" id="i00002-next">Next</button>
+						</div>
 					</div>
 				</div>
 			</div>
