--- a/homepage/cup00003.html
+++ b/homepage/cup00003.html
@@ -35,10 +35,9 @@
 	<div class="flexWrap">
 		<div class="flexLayer">
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
-			<div class="inner">
-				<h2 class="tit" id="i00003-selectPlatformTypeLb">Select Platform Type</h2>
-
-				<section class="contGroup">
+			<div class="flexContent">
+				<div class="inner">
+					<h2 class="tit" id="i00003-selectPlatformTypeLb">Select Platform Type</h2>
 					<dl class="inpItem">
 						<dt id="i00003-platformTypeLb">Platform Type</dt>
 						<dd class="tr">
@@ -70,37 +69,35 @@
 								</div>
 							</dd>
 						</dl>
-				</section>
 
-				<section class="contGroup">
-					<h1 class="tit" id="i00003-termsOfUseLb">Terms of Use</h1>
-					<div class="txtBox" id="i00003-termsOfUse">
-						Service Agreement <br />
+						<h3 class="tit" id="i00003-termsOfUseLb">Terms of Use</h3>
+						<div class="txtBox" id="i00003-termsOfUse">
+							Service Agreement <br />
 						{Content of OPUS Logistics Service Agreement} <br />
 						{Content of OPUS Logistics Service Agreement} <br />
 						{Content of OPUS Logistics Service Agreement}
 					</div>
-						<div class="lineBasic"></div>
-						<div class="agreeChk">
-							<p class="txt" id="i00003-agreeTermsLb">I am sure to read and to agree the terms</p>
-							<div class="checkbox">
-								<input type="checkbox" name="i00003-agreeTermsChk" id="i00003-agreeTermsChk"><label for="i00003-agreeTermsChk" id="i00003-agreeTerms">Agree</label>
+							<div class="lineBasic"></div>
+							<div class="agreeChk">
+								<p class="txt" id="i00003-agreeTermsLb">I am sure to read and to agree the terms</p>
+								<div class="checkbox">
+									<input type="checkbox" name="i00003-agreeTermsChk" id="i00003-agreeTermsChk"><label for="i00003-agreeTermsChk" id="i00003-agreeTerms">Agree</label>
+								</div>
+							</div>
+							<div class="joinBtn">
+								<div class="btns">
+									<button class="btn" id="i00003-next">Next</button>
+								</div>
 							</div>
 						</div>
-				</section>
-				<div class="joinBtn">
-					<div class="btns">
-						<button class="btn" id="i00003-next">Next</button>
+					</div>
+					<div class="link">
+						<a href="#" id="i00003-helpLb">Help</a>
+						<a href="#" id="i00003-privacyLb">Privacy</a>
+						<a href="#" id="i00003-termsLb">Terms</a>
 					</div>
 				</div>
 			</div>
-			<div class="link">
-				<a href="#" id="i00003-helpLb">Help</a>
-				<a href="#" id="i00003-privacyLb">Privacy</a>
-				<a href="#" id="i00003-termsLb">Terms</a>
-			</div>
-		</div>
-	</div>
 </body>
 
 </html>
