--- a/login/cup10003.html
+++ b/login/cup10003.html
@@ -35,10 +35,10 @@
 	<div class="flexWrap">
 		<div class="flexLayer">
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
-			<div class="inner">
-				<h2 class="tit" id="i10003-newAccount">New Account</h2>
-				<section class="contGroup">
-					<h1 class="tit" id="i10003-userLb">User</h1>
+			<div class="flexContent">
+				<div class="inner">
+					<h2 class="tit" id="i10003-newAccount">New Account</h2>
+					<h3 class="tit" id="i10003-userLb">User</h3>
 					<dl class="inpItem">
 						<dt id="i10003-nameLb">Name</dt>
 						<dd>
@@ -84,9 +84,8 @@
 					<div class="txtBox">
 						<p class="alertMessage" id="i10003-misconfirmPasswordLb">The passwords you entered don't match.</p>
 					</div>
-				</section>
-				<section class="contGroup">
-					<h1 class="tit" id="i10003-organizationLb">Organization</h1>
+
+					<h3 class="tit" id="i10003-organizationLb">Organization</h3>
 					<dl class="inpItem">
 						<dt id="i10003-companyLb">Company</dt>
 						<dd>
@@ -410,10 +409,10 @@
 							</div>
 						</dd>
 					</dl>
-				</section>
-				<div class="joinBtn">
-					<div class="btns">
-						<button class="btn" id="i10003-next">Next</button>
+					<div class="joinBtn">
+						<div class="btns">
+							<button class="btn" id="i10003-next">Next</button>
+						</div>
 					</div>
 				</div>
 			</div>
